force-app/main/default/objects/Contract/fields/ACostasFormula__c.field-meta.xml
<CustomField>
    <fullName>ACostasFormula__c</fullName>
    <description>Muestra el valor seleccionado en la oportunidad</description>
    <formula>TEXT(Oportunidad__r.AsuncionCostas__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asunción de costas</label>
    <type>Text</type>
</CustomField>