force-app/main/default/objects/Contract/fields/AsuncionCostas__c.field-meta.xml
<CustomField>
    <fullName>AsuncionCostas__c</fullName>
    <description>Hoja de encargo con/sin asunción de costas</description>
    <inlineHelpText>Hoja de encargo con/sin asunción de costas</inlineHelpText>
    <label>Asunción de costas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SiNo</valueSetName>
    </valueSet>
</CustomField>