force-app/main/default/objects/Contract/fields/BancoAdquisicion__c.field-meta.xml
<CustomField>
    <fullName>BancoAdquisicion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Banco en el que se realizó la adquisición</description>
    <inlineHelpText>Banco en el que se realizó la adquisición</inlineHelpText>
    <label>Banco adquisición</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos (Banco adquisición)</relationshipLabel>
    <relationshipName>Adquisicion</relationshipName>
    <type>Lookup</type>
</CustomField>