force-app/main/default/objects/Contract/fields/BancoPrestamo__c.field-meta.xml
<CustomField>
    <fullName>BancoPrestamo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Banco que concede el préstamo</description>
    <label>Banco que concede el préstamo</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos (Banco que concede el préstamo)</relationshipLabel>
    <relationshipName>Prestamos</relationshipName>
    <type>Lookup</type>
</CustomField>