force-app/main/default/objects/Contract/fields/BodyMinerva__c.field-meta.xml
<CustomField>
    <fullName>BodyMinerva__c</fullName>
    <description>Para depurar integración</description>
    <label>Body Minerva</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>