force-app/main/default/objects/Contract/fields/BodyProduccion__c.field-meta.xml
<CustomField>
    <fullName>BodyProduccion__c</fullName>
    <description>Para depurar integración</description>
    <label>Body Producción</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>