force-app/main/default/objects/Contract/fields/Bonificaciones__c.field-meta.xml
<CustomField>
    <fullName>Bonificaciones__c</fullName>
    <description>Bonificaciones</description>
    <label>Bonificaciones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>