force-app/main/default/objects/Contract/fields/CorreoElectronicoContacto__c.field-meta.xml
<CustomField>
    <fullName>CorreoElectronicoContacto__c</fullName>
    <description>Correo electrónico del contacto asociado al expediente para poder usarlo en los workflows y así enviar la hoja de encargo</description>
    <label>Correo Electrónico Contacto</label>
    <type>Email</type>
</CustomField>