force-app/main/default/objects/Contract/fields/DireccionSucursal__c.field-meta.xml
<CustomField>
    <fullName>DireccionSucursal__c</fullName>
    <description>Dirección de la sucursal</description>
    <label>Dirección de la sucursal</label>
    <type>TextArea</type>
</CustomField>