force-app/main/default/objects/Contract/fields/DocumentacinBasicaAportada__c.field-meta.xml
<CustomField>
    <fullName>DocumentacinBasicaAportada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check que se marcará cuando la documentación se aportada</description>
    <label>Documentación básica aportada</label>
    <type>Checkbox</type>
</CustomField>