force-app/main/default/objects/Contract/fields/DomicilioSocialDemandado__c.field-meta.xml
<CustomField>
    <fullName>DomicilioSocialDemandado__c</fullName>
    <description>Domicilio social Banco Demandado</description>
    <formula>ParteContraria__r.ShippingStreet &amp; BR() &amp;
ParteContraria__r.ShippingCity &amp; &quot;, &quot; &amp;
ParteContraria__r.ShippingState &amp; &quot; &quot; &amp;
ParteContraria__r.ShippingPostalCode &amp; BR() &amp;
ParteContraria__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domicilio social Banco Demandado</label>
    <type>Text</type>
</CustomField>