force-app/main/default/objects/Contract/fields/EmpleadoBP__c.field-meta.xml
<CustomField>
    <fullName>EmpleadoBP__c</fullName>
    <description>Empleado del Banco Popular o Grupo</description>
    <inlineHelpText>Empleado del Banco Popular o Grupo</inlineHelpText>
    <label>Empleado Banco Popular/Grupo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>