force-app/main/default/objects/Contract/fields/EstadoComunidad__c.field-meta.xml
<CustomField>
    <fullName>EstadoComunidad__c</fullName>
    <description>Estado del expediente visible para el cliente en la comunidad</description>
    <formula>CASE (Status, &apos;Contratado&apos;, &apos;1&apos;,
&apos;Completado básico&apos;, &apos;2&apos;,
&apos;Venia&apos;, &apos;3&apos;,
&apos;Desistido&apos;, &apos;4&apos;,
&apos;Revocado&apos;,&apos;5&apos;,
&apos;Acuerdo&apos;,&apos;6&apos;,
&apos;No viable&apos;, &apos;7&apos;,
&apos;8&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado actual del expediente</label>
    <type>Text</type>
</CustomField>