force-app/main/default/objects/Contract/fields/EstadoExpedienteComunidad__c.field-meta.xml
<CustomField>
    <fullName>EstadoExpedienteComunidad__c</fullName>
    <description>Contendrá el valor del estado que se mostrará en la comunidad para los usuarios</description>
    <label>Estado expediente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>