force-app/main/default/objects/Contract/fields/EstadoSyncMinerva__c.field-meta.xml
<CustomField>
    <fullName>EstadoSyncMinerva__c</fullName>
    <description>Estado de la sincronización con los servicios web de Minerva. Los valores que pueden venir en el campos son OK y ERROR</description>
    <label>Estado sincronización Minerva</label>
    <length>10</length>
    <type>Text</type>
</CustomField>