force-app/main/default/objects/Contract/fields/EstadoSyncProd__c.field-meta.xml
<CustomField>
    <fullName>EstadoSyncProd__c</fullName>
    <description>Estado de la sincronización con los servicios web de Producción. Los valores que pueden venir en el campos son OK y ERROR</description>
    <label>Estado sincronización Producción</label>
    <length>10</length>
    <type>Text</type>
</CustomField>