force-app/main/default/objects/Contract/fields/EURIBOR__c.field-meta.xml
<CustomField>
    <fullName>EURIBOR__c</fullName>
    <description>Porcentaje diferencial / margen EURIBOR</description>
    <label>Porcentaje diferencial / margen EURIBOR</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>