force-app/main/default/objects/Contract/fields/ExpedientePrincipal__c.field-meta.xml
<CustomField>
    <fullName>ExpedientePrincipal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Expediente principal con el que está relacionado</description>
    <inlineHelpText>Expediente principal con el que está relacionado</inlineHelpText>
    <label>Expediente principal</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Expedientes</relationshipName>
    <type>Lookup</type>
</CustomField>