force-app/main/default/objects/Contract/fields/ExpedientePrincipalFormula__c.field-meta.xml
<CustomField>
    <fullName>ExpedientePrincipalFormula__c</fullName>
    <description>Campo Formula que carga el valor del campo ExpedientePrincipal__c para que el componente de GD no falle al tener dos IDs en el formato de página</description>
    <formula>if( AND( 
					    NOT( ISNULL(ExpedientePrincipal__c) ),
					    NOT( ISBLANK(ExpedientePrincipal__c)) 
	    ),
				  HYPERLINK(&apos;/&apos; &amp; ExpedientePrincipal__c,  ExpedientePrincipal__r.IdExpediente__c),
			   &apos;&apos;
)</formula>
    <label>Expediente principal</label>
    <type>Text</type>
</CustomField>