force-app/main/default/objects/Contract/fields/FechaCambioEstado__c.field-meta.xml
<CustomField>
    <fullName>FechaCambioEstado__c</fullName>
    <description>Fecha en la que se produce un cambio de estado del expediente</description>
    <label>Fecha cambio estado</label>
    <type>Date</type>
</CustomField>