force-app/main/default/objects/Contract/fields/FechaHipoteca__c.field-meta.xml
<CustomField>
    <fullName>FechaHipoteca__c</fullName>
    <description>Fecha de la hipoteca</description>
    <label>Fecha hipoteca</label>
    <type>Date</type>
</CustomField>