force-app/main/default/objects/Contract/fields/FechaLiquidacion__c.field-meta.xml
<CustomField>
    <fullName>FechaLiquidacion__c</fullName>
    <description>Fecha de notificación de la liquidación</description>
    <inlineHelpText>Fecha de notificación de la liquidación</inlineHelpText>
    <label>Fecha notificación liquidación</label>
    <type>Date</type>
</CustomField>