force-app/main/default/objects/Contract/fields/FechaNotificacionCambioEstado__c.field-meta.xml
<CustomField>
    <fullName>FechaNotificacionCambioEstado__c</fullName>
    <description>Fecha Envió Notificación de 6 meses de Antigüedad</description>
    <label>Fecha Notificacion Cambio Estado</label>
    <type>Date</type>
</CustomField>