force-app/main/default/objects/Contract/fields/FechaOperacion__c.field-meta.xml
<CustomField>
    <fullName>FechaOperacion__c</fullName>
    <description>Fecha de la adquisición</description>
    <inlineHelpText>Fecha de la adquisición</inlineHelpText>
    <label>Fecha de compra</label>
    <type>Date</type>
</CustomField>