force-app/main/default/objects/Contract/fields/FechaPago__c.field-meta.xml
<CustomField>
    <fullName>FechaPago__c</fullName>
    <description>Fecha en la que se realiza el pago inicial.</description>
    <inlineHelpText>Fecha en la que se realiza el pago inicial.</inlineHelpText>
    <label>Fecha de pago (justificante)</label>
    <type>Date</type>
</CustomField>