force-app/main/default/objects/Contract/fields/FechaPagoFraccionado__c.field-meta.xml
<CustomField>
    <fullName>FechaPagoFraccionado__c</fullName>
    <description>Fecha de pago (fraccionado primer plazo)</description>
    <inlineHelpText>Fecha de pago (fraccionado primer plazo)</inlineHelpText>
    <label>Fecha de pago (fraccionado primer plazo)</label>
    <type>Date</type>
</CustomField>