force-app/main/default/objects/Contract/fields/FechaPresentacion__c.field-meta.xml
<CustomField>
    <fullName>FechaPresentacion__c</fullName>
    <description>Fecha de presentación del último escrito</description>
    <inlineHelpText>Fecha de presentación del último escrito</inlineHelpText>
    <label>Fecha de presentación</label>
    <type>Date</type>
</CustomField>