force-app/main/default/objects/Contract/fields/FechaVenta__c.field-meta.xml
<CustomField>
    <fullName>FechaVenta__c</fullName>
    <description>Fecha venta/transmisión</description>
    <label>Fecha venta/transmisión</label>
    <type>Date</type>
</CustomField>