force-app/main/default/objects/Contract/fields/FormaPagoLiquidacion__c.field-meta.xml
<CustomField>
    <fullName>FormaPagoLiquidacion__c</fullName>
    <description>Forma de pago de la liquidación</description>
    <label>Forma de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metálico</fullName>
            </value>
            <value>
                <fullName>Trasferencia</fullName>
            </value>
            <value>
                <fullName>Domiciliación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>