force-app/main/default/objects/Contract/fields/HojaDeEncargo__c.field-meta.xml
<CustomField>
    <fullName>HojaDeEncargo__c</fullName>
    <description>Enlace que lleva a la hoja de encargo que se ha seleccionado en la oportunidad</description>
    <formula>HYPERLINK(&apos;https://partial-clientesarriaga.cs100.force.com/apex/PDFHojaEncargo?id=&apos;&amp; Oportunidad__r.Id , &apos;aquí&apos; , &apos;_blank&apos;)</formula>
    <label>Hoja de Encargo</label>
    <type>Text</type>
</CustomField>