force-app/main/default/objects/Contract/fields/IconoPosibleConflictoInteres__c.field-meta.xml
<CustomField>
    <fullName>IconoPosibleConflictoInteres__c</fullName>
    <description>Campo fórmula para mostrar un icono cuando hay conflicto de interés</description>
    <formula>IF(  PosibleConflictoInteres__c, IMAGE(&quot;/img/msg_icons/warning24.png&quot;, &quot;Conflicto de interés&quot; ),  &quot;&quot; )</formula>
    <label>Posible Conflicto de Interés</label>
    <type>Text</type>
</CustomField>