force-app/main/default/objects/Contract/fields/IdClienteMinerva__c.field-meta.xml
<CustomField>
    <fullName>IdClienteMinerva__c</fullName>
    <description>Se informa en el expediente el id del cliente para enviárselo a minerva al cargar documentos</description>
    <formula>Account.IdClienteMinerva__c</formula>
    <label>Id Cliente Minerva</label>
    <type>Text</type>
</CustomField>