force-app/main/default/objects/Contract/fields/IdExpediente__c.field-meta.xml
<CustomField>
    <fullName>IdExpediente__c</fullName>
    <description>Número autogenerado en la oportunidad que se utiliza para realizar pagos y identificar el Expediente</description>
    <externalId>true</externalId>
    <label>IdExpediente</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>