force-app/main/default/objects/Contract/fields/IdOrigenMinerva__c.field-meta.xml
<CustomField>
    <fullName>IdOrigenMinerva__c</fullName>
    <label>IdOrigenMinerva</label>
    <type>TextArea</type>
</CustomField>