force-app/main/default/objects/Contract/fields/IdOrigenProduccion__c.field-meta.xml
<CustomField>
    <fullName>IdOrigenProduccion__c</fullName>
    <description>Campo utilizado para reflejar que ha habido una insercción correcta contra producción. Usado en la integración</description>
    <label>Id Origen Produccion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>