force-app/main/default/objects/Contract/fields/ImporteActosJuridicos__c.field-meta.xml
<CustomField>
    <fullName>ImporteActosJuridicos__c</fullName>
    <description>Importe Actos Jurídicos</description>
    <label>Importe Actos Jurídicos</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>