force-app/main/default/objects/Contract/fields/ImporteCompra__c.field-meta.xml
<CustomField>
    <fullName>ImporteCompra__c</fullName>
    <description>Importe de compra/adquisición</description>
    <label>Importe compra/adquisición</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>