force-app/main/default/objects/Contract/fields/ImporteGestoria__c.field-meta.xml
<CustomField>
    <fullName>ImporteGestoria__c</fullName>
    <description>Importe Gestoría</description>
    <label>Importe Gestoría</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>