force-app/main/default/objects/Contract/fields/ImporteLiquidacion__c.field-meta.xml
<CustomField>
    <fullName>ImporteLiquidacion__c</fullName>
    <description>Importe autoliquidación/liquidación</description>
    <label>Importe autoliquidación/liquidación</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>