force-app/main/default/objects/Contract/fields/ImporteNotaria__c.field-meta.xml
<CustomField>
    <fullName>ImporteNotaria__c</fullName>
    <description>Importe Notaría</description>
    <label>Importe Notaría</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>