force-app/main/default/objects/Contract/fields/ImportePrestamo__c.field-meta.xml
<CustomField>
    <fullName>ImportePrestamo__c</fullName>
    <description>Importe del préstamo</description>
    <label>Importe préstamo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>