force-app/main/default/objects/Contract/fields/ImporteRecuperar__c.field-meta.xml
<CustomField>
    <fullName>ImporteRecuperar__c</fullName>
    <description>Importe que se demanda en la denuncia</description>
    <label>Importe a recuperar</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>