force-app/main/default/objects/Contract/fields/ImporteRegistro__c.field-meta.xml
<CustomField>
    <fullName>ImporteRegistro__c</fullName>
    <description>Importe Registro</description>
    <label>Importe Registro</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>