force-app/main/default/objects/Contract/fields/ImporteTasacion__c.field-meta.xml
<CustomField>
    <fullName>ImporteTasacion__c</fullName>
    <description>Importe Tasación</description>
    <label>Importe Tasación</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>