force-app/main/default/objects/Contract/fields/ImporteTransmisionesPatrimoniales__c.field-meta.xml
<CustomField>
    <fullName>ImporteTransmisionesPatrimoniales__c</fullName>
    <description>Importe de transmisiones patrimoniales</description>
    <label>Importe Transmisiones patrimoniales</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>