force-app/main/default/objects/Contract/fields/ImporteVenta__c.field-meta.xml
<CustomField>
    <fullName>ImporteVenta__c</fullName>
    <description>Importe de venta/transmisión</description>
    <label>Importe venta/transmisión</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>