force-app/main/default/objects/Contract/fields/MessageSyncMinerva__c.field-meta.xml
<CustomField>
    <fullName>MessageSyncMinerva__c</fullName>
    <description>Mensaje del estado de la sincronización con los servicios web de Minerva. Aparecerá relleno si el estado es ERROR e indicará el error</description>
    <label>Mensaje sincronización Minerva</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>