force-app/main/default/objects/Contract/fields/MessageSyncProd__c.field-meta.xml
<CustomField>
    <fullName>MessageSyncProd__c</fullName>
    <description>Mensaje del estado de la sincronización con los servicios web de Producción. Aparecerá relleno si el estado es ERROR e indicará el error</description>
    <label>Mensaje sincronización Producción</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>