force-app/main/default/objects/Contract/fields/MIBOR__c.field-meta.xml
<CustomField>
    <fullName>MIBOR__c</fullName>
    <description>Porcentaje diferencial/margen MIBOR</description>
    <label>Porcentaje diferencial/margen MIBOR</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>