force-app/main/default/objects/Contract/fields/NClausula__c.field-meta.xml
<CustomField>
    <fullName>NClausula__c</fullName>
    <description>Nº Clausula interés variable</description>
    <label>Nº Cláusula interés variable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>