force-app/main/default/objects/Contract/fields/NIFBancoDemandado__c.field-meta.xml
<CustomField>
    <fullName>NIFBancoDemandado__c</fullName>
    <description>NIF Banco demandado</description>
    <formula>ParteContraria__r.DocumentoIdentidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NIF Banco demandado</label>
    <type>Text</type>
</CustomField>