force-app/main/default/objects/Contract/fields/NoConsumidor__c.field-meta.xml
<CustomField>
    <fullName>NoConsumidor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el cliente no es consumidor</description>
    <inlineHelpText>Indica si el cliente no es consumidor</inlineHelpText>
    <label>No consumidor</label>
    <type>Checkbox</type>
</CustomField>