force-app/main/default/objects/Contract/fields/NombreCortoOficina__c.field-meta.xml
<CustomField>
    <fullName>NombreCortoOficina__c</fullName>
    <description>Nombre corto de la oficina de contratación</description>
    <formula>OficinaContratacion__r.NombreCorto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Nombre corto de la oficina de contratación</inlineHelpText>
    <label>Nombre corto oficina</label>
    <type>Text</type>
</CustomField>