force-app/main/default/objects/Contract/fields/Num_Notificaciones__c.field-meta.xml
<CustomField>
    <fullName>Num_Notificaciones__c</fullName>
    <description>Numero de Notificaciones que se le han mandado en un mismo estado</description>
    <label>NumNotificaciones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>