force-app/main/default/objects/Contract/fields/NumeroCuotas__c.field-meta.xml
<CustomField>
    <fullName>NumeroCuotas__c</fullName>
    <description>Número de cuotas de la hipoteca</description>
    <label>Número cuotas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>