force-app/main/default/objects/Contract/fields/NumeroExpedienteF__c.field-meta.xml
<CustomField>
    <fullName>NumeroExpedienteF__c</fullName>
    <description>Link con el número de Expedinte de Arriaga que redirige mediante el Id del expediente de SF</description>
    <formula>HYPERLINK( &quot;/&quot; &amp; Id , IdExpediente__c ,&apos;_self&apos;)</formula>
    <label>Número Expediente</label>
    <type>Text</type>
</CustomField>