force-app/main/default/objects/Contract/fields/NumeroProtocolo__c.field-meta.xml
<CustomField>
    <fullName>NumeroProtocolo__c</fullName>
    <description>Número de protocolo</description>
    <label>Número de protocolo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>