force-app/main/default/objects/Contract/fields/NumeroTarjeta__c.field-meta.xml
<CustomField>
    <fullName>NumeroTarjeta__c</fullName>
    <description>Número de la tarjeta Revolving</description>
    <inlineHelpText>Número de la tarjeta Revolving</inlineHelpText>
    <label>Número de tarjeta</label>
    <length>16</length>
    <type>Text</type>
</CustomField>