force-app/main/default/objects/Contract/fields/NumeroTitulos__c.field-meta.xml
<CustomField>
    <fullName>NumeroTitulos__c</fullName>
    <description>Número de títulos adquiridos</description>
    <label>Número de títulos adquiridos</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>