force-app/main/default/objects/Contract/fields/OficinaAsesor__c.field-meta.xml
<CustomField>
    <fullName>OficinaAsesor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oficina del asesor cuando se realiza la cita</description>
    <label>Oficina de cita</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos (Oficina del asesor)</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>