force-app/main/default/objects/Contract/fields/OficinaContratacion__c.field-meta.xml
<CustomField>
    <fullName>OficinaContratacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oficina donde se realiza la contratación</description>
    <label>Oficina de Contratación</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Expedientes</relationshipName>
    <type>Lookup</type>
</CustomField>