force-app/main/default/objects/Contract/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oportunidad asociada al expediente</description>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Expedientes</relationshipLabel>
    <relationshipName>Expedientes</relationshipName>
    <type>Lookup</type>
</CustomField>