force-app/main/default/objects/Contract/fields/PagoConfirmado__c.field-meta.xml
<CustomField>
    <fullName>PagoConfirmado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla que se marcará cuando el pago pase a estado &apos;Confirmado&apos;</description>
    <label>Pago confirmado</label>
    <type>Checkbox</type>
</CustomField>