force-app/main/default/objects/Contract/fields/ParteContraria__c.field-meta.xml
<CustomField>
    <fullName>ParteContraria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Empresa o particular contra el que se actúa en este expediente</description>
    <label>Parte contraria</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos (Parte contraria)</relationshipLabel>
    <relationshipName>Contrario</relationshipName>
    <type>Lookup</type>
</CustomField>