force-app/main/default/objects/Contract/fields/PlazoAmortizacion__c.field-meta.xml
<CustomField>
    <fullName>PlazoAmortizacion__c</fullName>
    <description>Plazo de amortización</description>
    <label>Plazo amortización</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>