force-app/main/default/objects/Contract/fields/PosibleConflictoInteres__c.field-meta.xml
<CustomField>
    <fullName>PosibleConflictoInteres__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que se marca cuando en el expediente si indica la parte contraria y este ya es un cliente de arriaga</description>
    <label>Casilla Posible Conflicto de Interés</label>
    <type>Checkbox</type>
</CustomField>