force-app/main/default/objects/Contract/fields/PrecioTitulo__c.field-meta.xml
<CustomField>
    <fullName>PrecioTitulo__c</fullName>
    <description>Precio del título</description>
    <label>Precio título</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>