force-app/main/default/objects/Contract/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto correspondiente con el expediente creado</description>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Expedientes</relationshipLabel>
    <relationshipName>Expedientes</relationshipName>
    <type>Lookup</type>
</CustomField>