force-app/main/default/objects/Contract/fields/ProductoFormula__c.field-meta.xml
<CustomField>
    <fullName>ProductoFormula__c</fullName>
    <description>Campo para mostrar solo el nombre del Producto y no se navegue.</description>
    <formula>Producto__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto</label>
    <type>Text</type>
</CustomField>