force-app/main/default/objects/Contract/fields/ProofPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>ProofPaymentDate__c</fullName>
    <description>Campo para guardar la fecha en la que se adjunta el justificante de pago</description>
    <inlineHelpText>Debe coincidir con la fecha registrada en el justificante de pago</inlineHelpText>
    <label>Fecha de pago (justificante)</label>
    <type>Date</type>
</CustomField>