force-app/main/default/objects/Contract/fields/ResponsableRedaccion__c.field-meta.xml
<CustomField>
    <fullName>ResponsableRedaccion__c</fullName>
    <description>Copia del mismo campo de Product2</description>
    <label>Responsable de Redacción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>