force-app/main/default/objects/Contract/fields/Revisiones__c.field-meta.xml
<CustomField>
    <fullName>Revisiones__c</fullName>
    <description>Revisiones</description>
    <label>Revisiones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>