force-app/main/default/objects/Contract/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <description>Sucursal de adquisición</description>
    <label>Sucursal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>