force-app/main/default/objects/Contract/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Tipo de pago realizado a la hora de realizar una contratación de un producto.</description>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TPV</fullName>
            </value>
            <value>
                <fullName>TPV Virtual</fullName>
            </value>
            <value>
                <fullName>En metálico</fullName>
            </value>
            <value>
                <fullName>Transferencia</fullName>
            </value>
            <value>
                <fullName>Autorizado sin provisión</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>