force-app/main/default/objects/Contract/fields/Tipo_de_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cuenta__c</fullName>
    <formula>Account.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Cuenta</label>
    <type>Text</type>
</CustomField>