force-app/main/default/objects/Contract/fields/TipoEscritura__c.field-meta.xml
<CustomField>
    <fullName>TipoEscritura__c</fullName>
    <description>Tipo de escritura</description>
    <label>Tipo Escritura venta/transmisión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venta</fullName>
            </value>
            <value>
                <fullName>Herencia</fullName>
            </value>
            <value>
                <fullName>Donación</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>